added icon in customerdashboard

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -6,6 +6,8 @@
     <title>CusumorDasboard</title>
     <link href="../files/css/CustomerDashboard..css" rel="stylesheet">
     <script src="../files/js/CustumorDashboard.js"></script>
+    <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
 <div class="topimg">
