fix issues with umlauts

--- a/login/login.html
+++ b/login/login.html
@@ -21,7 +21,7 @@
                    value="Test#2019"></label><br>
 
         <p>Passwort vergessen? <a href="loginforgotpass.html">Zurücksetzen</a></p>
-        <input id="btnLogin" name="btnLogin" type="submit" value="Login">
+        <input id="btnLogin" name="btnLogin" type="submit" value="Anmelden">
     </form>
     <p>Sie haben noch kein Konto? <a href="loginNewAccount.html">Erstellen sie sich jetzt eins</a></p>
 
