--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -39,9 +39,9 @@
                    required style="width: 300px" type="password">
             <span id="samePass"></span>
         </label><br><br>
-        <input id="btnSignIn" name="btnSignIn" type="submit" value="Sign In">
+        <input id="btnSignIn" name="btnSignIn" type="submit" value="Anmelden">
     </form>
-    <p>Sie haben schon ein Konot? <a href="login.html">Sign In</a></p>
+    <p>Sie haben schon ein Konto? <a href="login.html">Anmelden</a></p>
 </div>
 </body>
 <script>
