--- a/login/loginforgotpass.html
+++ b/login/loginforgotpass.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -8,13 +8,13 @@
 </head>
 <body>
 <div class="form">
-    <h1> Setzen sie ihr Design Revision Passwort zurück </h1>
+    <h1> Setzen sie ihr Design Revision Passwort zur&uumlck </h1>
     <form action="reset.php" id="forgottenpass" method="post">
         <label>E-Mail:
             <input id="email" name="email" onkeyup="check_up3()" placeholder="E-mail" required
                    type="email" value="lukas-biermann@fahr-zur-hoelle.org">
         </label><span id="statusEmail"></span><br><br>
-        <input id="resetpass" name="resetpass" type="submit" value="Passwort zurücksetzen">
+        <input id="resetpass" name="resetpass" type="submit" value="Passwort zur&#x00FC;cksetzen">
     </form>
 </div>
 </body>
