added on client click view over project members

--- a/login/login.html
+++ b/login/login.html
@@ -55,7 +55,7 @@
 
     }
     function getURLParameter(name) {
-        var value = decodeURIComponent((RegExp(name + '=' + '(.+?)(&|$)').exec(location.search) || [, ""])[1]);
+        let value = decodeURIComponent((RegExp(name + '=' + '(.+?)(&|$)').exec(location.search) || [, ""])[1]);
         return (value !== 'null') ? value : false;
     }
 </script>
