--- a/login/loginNewPassword.html
+++ b/login/loginNewPassword.html
@@ -96,7 +96,18 @@
         }
     }
 
-
+    function getURLParameter(name) {
+        let value = decodeURIComponent((RegExp(name + '=' + '(.+?)(&|$)').exec(location.search) || [, ""])[1]);
+        return (value !== 'null') ? value : false;
+    }
+    window.onload=function mailOrPass() {
+        let success = getURLParameter("success");
+        if (success === "pswd") {
+            let feedback = document.getElementById("samePass");
+            feedback.style.color = "green";
+            feedback.innerHTML = "<strong>Passwort erfolgreich ge&auml;ndert</strong>"
+        }
+    };
 
 </script>
 </html>
