improvements and cleanup for the presentation

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>CusumorDasboard</title>
+    <title>Customer Dashboard</title>
     <link href="../files/css/CustomerDashboard..css" rel="stylesheet">
     <script src="../files/js/CustumorDashboard.js"></script>
     <link href="../files/img/favicon.ico" rel="icon" type="image/x-icon">
