--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -39,7 +39,7 @@
                    required style="width: 300px" type="password">
             <span id="samePass"></span>
         </label><br><br>
-        <input id="btnSignIn" name="btnSignIn" type="submit" value="Anmelden">
+        <input id="btnSignIn" name="btnSignIn" type="submit" value="Regestrieren">
     </form>
     <p>Sie haben schon ein Konto? <a href="login.html">Anmelden</a></p>
 </div>
