Api integration and minor changes

--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>hello world</title>
+    <title>Editor - DesignRevision</title>
 </head>
 <body style="background-color: grey">
 <canvas id="pdf" style="position: absolute; border: none; z-index: -5;"></canvas>
-<h1>hello person, whats up?</h1>
+<h1 id="titlecard">Designvorschlag für /</h1>
 <!-- The pdfjs library -->
 <script src="../files/js/renderScriptWLibrary.js"></script>
 </body>
