--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -22,6 +22,7 @@
         </label>
     </form>
 </div>
+<div class="space"></div>
 <div class="form" id="form1">
     <form enctype="multipart/form-data" id="CustumorDashForm" method="post">
         <label>
@@ -36,7 +37,6 @@
         <input accept="application/pdf" name="datei" type="file">
         <br><br>
         <input onclick="window.alert('Hello World')" type="submit" value="Speichern">
-
     </form>
 </div>
 <dialog aria-labelledby="dialog-heading" id="dialog">
@@ -46,7 +46,6 @@
     <button onclick="closeYes()">Ja</button>
     <button onclick="closeNo()">Nein</button>
 </dialog>
-<p onclick="generate()"> Hello World</p>
 <h1 style="color: red;text-align: center;display: none" id="message">Keine Treffer</h1>
 </body>
 </html>
