--- a/login/verifizieren.html
+++ b/login/verifizieren.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="icon" href="../files/img/favicon.ico" type="image/x-icon">
     <title>Verifizieren</title>
 </head>
 <body>
