--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -4,8 +4,8 @@
     <title>Editor - DesignRevision</title>
 </head>
 <body style="background-color: grey">
-<canvas id="the-svg" style="position: absolute; border: none; z-index: -5;"></canvas>
-<div id="pdf" style="position: absolute; border: none; z-index: -5; background-color: white;"></div>
+<canvas id="pdf" style="position: absolute; border: none; z-index: -5;"></canvas>
+<div id="svg" style="display: none; position: absolute; border: none; z-index: -5;"></div>
 <h1 id="titlecard">Designvorschlag für /</h1>
 <!-- The pdfjs library -->
 <script src="../files/js/renderScriptWLibrary.js"></script>
