--- a/login/mobileSeite.html
+++ b/login/mobileSeite.html
@@ -9,7 +9,7 @@
 <body>
 <div style="background-color: #0cfad6;border-radius: 20px;transform:translate(30%, 40%);margin-right: 40%">
     <img style="padding-left: 40%" alt="tick" height="200" src="../files/img/logo.png" width="200">
-    <h1 style="text-align: center">Es tut uns Leid aber derzeit unterst&uuml;tzen wir  keine Mobilen Geräte</h1>
+    <h1 style="text-align: center">Es tut uns Leid aber derzeit unterst&uuml;tzen wir  keine Mobile Geräte</h1>
 </div>
 </body>
 </html>
