--- a/login/loginNewAccount.html
+++ b/login/loginNewAccount.html
@@ -10,7 +10,7 @@
 <body>
 <div class="form">
     <form action="signup.php" id="newAccountForm" method="post">
-        <h1>Erstellen sie eine Konto</h1>
+        <h1>Erstellen sie ein Konto</h1>
         <div class="name">
             <label>
                 <input id="firstName" name="firstName" placeholder="Vorname" required type="text">
@@ -39,7 +39,7 @@
                    required style="width: 300px" type="password">
             <span id="samePass"></span>
         </label><br><br>
-        <input id="btnSignIn" name="btnSignIn" type="submit" value="Regestrieren">
+        <input id="btnSignIn" name="btnSignIn" type="submit" value="Registrieren">
     </form>
     <p>Sie haben schon ein Konto? <a href="login.html">Anmelden</a></p>
 </div>
