--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -2,11 +2,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Editor - DesignRevision</title>
+    <link href="../files/css/CommentDesign.css" rel="stylesheet">
 </head>
-<body style="background-color: grey">
-<canvas id="pdf" style="position: absolute; border: none; z-index: -5;"></canvas>
-<div id="svg" style="display: none; position: absolute; border: none; z-index: -5;"></div>
-<h1 id="titlecard">Designvorschlag für /</h1>
+<body style="background-color: grey;">
+<canvas id="pdf" style="position: absolute; border: none; z-index: -5; top: 20px; left: 10px;">
+    <div id="commentArea" style="position: relative; border: none; z-index: -4; top: 20px; left: 10px;"></div>
+</canvas>
+<!-- <div id="svg" style="display: none; position: absolute; border: none; z-index: -5;"></div> -->
+<div id="titlebar">
+    <h1 id="titlecard">Designvorschlag für /</h1>
+</div>
+<div id="toolbox">
+    <button id="createComment" style="margin-left: 4%">Kommentarmodus einschalten</button>
+</div>
 <!-- The pdfjs library -->
 <script src="../files/js/renderScriptWLibrary.js"></script>
 </body>
