added rudimentary VersionOverview.html

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div class="topimg">
-    <img style="float: left" alt="tick" height="100"
-         src="../files/img/logo.png"
+    <img alt="tick" height="100" src="../files/img/logo.png"
+         style="float: left"
          width="100">
 </div>
 <div class="topform">
@@ -31,14 +31,30 @@
             <input id="projectname" name="projectname" placeholder="Projektname" required type="text">
         </label><br>
         <span id="nameToLong"></span><br>
-        <input type="file" accept="application/pdf"name="inputFile"  id="inputFile" style="display: none;" />
-        <input type="button" value="Datei suchen" style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;margin: 15px 15px 15px 90px;border: none;cursor: pointer" onclick="document.getElementById('inputFile').click();" />
-        <div class="image-preview" id="imagePreview" >
-            <img src="../files/img/pdf.icon.png" id="pdfIcon" style="display:none;width: 10%;height: 10%" alt="PDF"/><br>
+        <label>
+            <input style="width: 60%" id="email" name="email" placeholder="E-mail" required type="text">
+        </label>
+            <select name="AdminOrMember" required>
+                <option>Auswählen</option>
+                <option>Member</option>
+                <option>Admin</option>
+            </select><br>
+        <input  style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;margin-top: 10px;margin-left:25px;border: none;cursor: pointer"
+               type="button"
+               value="Weiterer Nutzer auswählen"/>
+        <input accept="application/pdf" id="inputFile" name="inputFile" style="display: none;" type="file"/>
+        <input onclick="document.getElementById('inputFile').click();" style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;margin: 15px 15px 15px 90px;border: none;cursor: pointer"
+               type="button"
+               value="Datei suchen"/>
+        <div class="image-preview" id="imagePreview">
+            <img alt="PDF" id="pdfIcon" src="../files/img/pdf.icon.png"
+                 style="display:none;width: 10%;height: 10%"/><br>
             <span class="image-preview__file"></span>
             <span class="image-preview__default-text">Keine Datei ausgew&auml;lt</span>
         </div>
-        <input type="button" id="btnAddMember" value="Member ausw&#228;hlen" style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;justify-content:center;border: none;margin-left:60px;margin-top:10px;cursor: pointer" onclick="addMember()" />
+        <input id="btnAddMember" onclick="addMember()" style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;justify-content:center;border: none;margin-left:60px;margin-top:10px;cursor: pointer"
+               type="button"
+               value="Member ausw&#228;hlen"/>
         <input type="submit" value="Speichern">
     </form>
 </div>
