--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -5,9 +5,10 @@
     <link href="../files/css/CommentDesign.css" rel="stylesheet">
 </head>
 <body style="background-color: grey;">
-<canvas id="pdf" style="position: absolute; border: none; z-index: -5; top: 20px; left: 10px;">
-    <div id="commentArea" style="position: relative; border: none; z-index: -4; top: 20px; left: 10px;"></div>
-</canvas>
+<!-- The pdfjs library -->
+<script src="../files/js/renderScriptWLibrary.js"></script>
+<div id="commentContainer" style="position: relative; border: none; z-index: -4; top: 20px; left: 10px;"></div>
+<canvas id="pdf" style="position: absolute; border: none; z-index: -5; top: 20px; left: 10px;"></canvas>
 <!-- <div id="svg" style="display: none; position: absolute; border: none; z-index: -5;"></div> -->
 <div id="titlebar">
     <h1 id="titlecard">Designvorschlag für /</h1>
@@ -15,7 +16,6 @@
 <div id="toolbox">
     <button id="createComment" style="margin-left: 4%">Kommentarmodus einschalten</button>
 </div>
-<!-- The pdfjs library -->
-<script src="../files/js/renderScriptWLibrary.js"></script>
+<div id="loading" style="position:fixed; height: 10px; background-color: #00620b; width: 1%; bottom: 1%;"></div>
 </body>
 </html>
