updated Comment Area, fixed progress Bar bugs

--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -7,7 +7,10 @@
 <body style="background-color: grey;">
 <!-- The pdfjs library -->
 <script src="../files/js/renderScriptWLibrary.js"></script>
-<div id="commentContainer" style="position: relative; border: none; z-index: -4; top: 20px; left: 10px;"></div>
+<div id="commentContainer" style="position: absolute; border: none; z-index: -4; top: 20px; left: 10px;">
+    <div id="commentArea"
+         style="position: absolute; background-color: red; display: none; width: 10px; height: 10px;"></div>
+</div>
 <canvas id="pdf" style="position: absolute; border: none; z-index: -5; top: 20px; left: 10px;"></canvas>
 <!-- <div id="svg" style="display: none; position: absolute; border: none; z-index: -5;"></div> -->
 <div id="titlebar">
