--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color: grey;">
 <!-- The pdfjs library -->
-<script src="../files/js/renderScriptWLibrary.js"></script>
+<script async src="../files/js/renderScriptWLibrary.js"></script>
 <div id="commentContainer" style="position: absolute; border: none; z-index: -4; top: 20px; left: 10px;">
     <div id="commentArea"
          style="position: absolute; background-color: red; display: none; width: 10px; height: 10px;"></div>
