some fixes and added progress-Bar for upload

--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -61,6 +61,9 @@
                type="button"
                value="Member ausw&#228;hlen"/>
         <input type="submit" value="Speichern">
+        <div id="progressBarBorder"style="border: 3px solid lightgrey;border-radius: 4px;margin: 20px;background: lightgrey;display: none">
+            <div id="progressBar" style="height:24px;width:1%;background-color:green;border-radius: 4px;color: white;text-align: center"></div>
+        </div>
     </form>
 </div>
 <dialog aria-labelledby="dialog-heading" id="dialog">
