--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -11,7 +11,8 @@
     <div id="commentArea"
          style="position: absolute; background-color: red; display: none; width: 10px; height: 10px;"></div>
 </div>
-<canvas id="pdf" style="position: absolute; border: none; z-index: -5; top: 20px; left: 10px;"></canvas>
+<canvas id="pdf"
+        style="position: absolute; border: none; z-index: -5; top: 20px; left: 10px; page-break-inside: avoid; clear: none;"></canvas>
 <!-- <div id="svg" style="display: none; position: absolute; border: none; z-index: -5;"></div> -->
 <div id="titlebar">
     <h1 id="titlecard">Designvorschlag für /</h1>
