--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -75,4 +75,5 @@
 </dialog>
 <h1 id="message" style="color: red;text-align: center;display: none">Keine Treffer</h1>
 </body>
+<script src="https://code.jquery.com/jquery-latest.js"></script>
 </html>
