mainly styling and progressBar changes

--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -4,22 +4,24 @@
     <title>Editor - DesignRevision</title>
     <link href="../files/css/CommentDesign.css" rel="stylesheet">
 </head>
-<body style="background-color: grey;">
+<body>
 <!-- The pdfjs library -->
-<script async src="../files/js/renderScriptWLibrary.js"></script>
+<script src="../files/js/renderScriptWLibrary.js"></script>
 <canvas id="pdf"
         style="position: absolute; border: none; z-index: -5; top: 20px; left: 10px; page-break-inside: avoid; clear: none;"></canvas>
 <div id="commentContainer" style="position: absolute; border: none; z-index: -4; top: 20px; left: 10px;">
     <div id="commentArea"
-         style="position: absolute; background-color: red; display: none; width: 10px; height: 10px;"></div>
+         style="position: absolute; background-color: rgba(99, 99, 99, 0.5); display: none; width: 10px; height: 10px; border-radius: 3px;"></div>
 </div>
 <!-- <div id="svg" style="display: none; position: absolute; border: none; z-index: -5;"></div> -->
 <div id="titlebar">
     <h1 id="titlecard">Designvorschlag für /</h1>
 </div>
 <div id="toolbox">
-    <button id="createComment" style="margin-left: 4%">Kommentarmodus einschalten</button>
+    <button id="createComment" style="left: 40px; right: 40px;">Kommentarmodus einschalten</button>
 </div>
-<div id="loading" style="position:fixed; height: 10px; background-color: #00620b; width: 1%; bottom: 1%;"></div>
+<div id="lowbar" style="right: 20px; left: 20px;">
+    <div id="loading" style="right: 25px; left: 25px; width: 10px;"></div>
+</div>
 </body>
 </html>
