--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -60,7 +60,7 @@
                style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;justify-content:center;border: none;margin-left:60px;margin-top:10px;cursor: pointer"
                type="button"
                value="Member ausw&#228;hlen"/>
-        <input type="submit" value="Speichern">
+        <input id="submitButton" type="submit" value="Speichern">
         <div id="progressBarBorder"style="border: 3px solid lightgrey;border-radius: 4px;margin: 20px;background: lightgrey;display: none">
             <div id="progressBar" style="height:24px;width:1%;background-color:green;border-radius: 4px;color: white;text-align: center"></div>
         </div>
