--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- The pdf.js library and controls-->
-<script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
+<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 <script defer src="../files/js/renderScript.js"></script>
 <canvas id="pdf" style="top: 20px; left: 10px;"></canvas>
 <!--<div id="pdf" style="top: 20px; left: 10px;"></div>-->
