you can now go from dashboard to VersionOverview.html

--- a/app/VersionOverview.html
+++ b/app/VersionOverview.html
@@ -10,10 +10,12 @@
 </head>
 <body>
 <div class="topimg">
+    <a href="../app/CustumorDashboard.html">Zur&uuml;ck</a>
     <img  alt="tick" height="100" src="../files/img/logo.png"
          style="float: left"
          width="100">
     <h1>Versions&uuml;sicht</h1>
+
 </div>
 <div class="space">
 </div>
