Comments are no longer able to be outside of pdf, added Icon

--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Editor - DesignRevision</title>
+    <link href="../files/img/favicon.ico" rel="icon" type="image/x-icon">
     <link href="../files/css/CommentDesign.css" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +14,7 @@
 <!--<div id="pdf" style="top: 20px; left: 10px;"></div>-->
 <div id="commentContainer" style="top: 20px; left: 10px;">
     <div id="commentArea"
-         style="display: none; width: 10px; height: 10px;"></div>
+         style="display: none; width: 10px; height: 10px; z-index: -3;"></div>
 </div>
 
 <div id="titlebar">
