firefox performance attemts, cdn switch

--- a/app/CommentDesign.html
+++ b/app/CommentDesign.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <!-- The pdf.js library and controls-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.min.js"></script>
 <script defer src="../files/js/renderScript.js"></script>
 <div id="titleBar">
     <p id="titleCard">Designvorschlag für /</p>
