--- a/app/CustumorDashboard.html
+++ b/app/CustumorDashboard.html
@@ -43,11 +43,11 @@
         <span id="messageRole"></span><br><span id="messageEmail"></span><br>
         <span id="messageDoubleSelected"></span>
         <input onclick="addEmailField()"
-               style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;margin-top: 10px;margin-left:25px;border: none;cursor: pointer"
+               style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;margin-top: 10px;margin-left:10%;border: none;cursor: pointer"
                type="button" value="Weiterer Nutzer auswählen"/>
         <input accept="application/pdf" id="inputFile" name="inputFile" style="display: none;" type="file"/>
         <input onclick="document.getElementById('inputFile').click();"
-               style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;margin: 15px 15px 15px 90px;border: none;cursor: pointer"
+               style=" text-align: center;background-color: #333;color: #fff;font-size: 20px;padding:8px 10px;margin-top: 4%;margin-left:30%;margin-bottom:2%;border: none;cursor: pointer"
                type="button"
                value="Datei suchen"/>
         <div class="image-preview" id="imagePreview">
